[package]
name = "holger-ron"
version = "0.2.0"
edition = "2021"
authors = ["Rickard Lundin <rickard@x14.se>","Wilhelm Ågren"]


description = "Holger guards your artifacts at rest. May Allfather Odin watch over every bit."
license = "MIT"
repository = "https://github.com/Ignalina/holger"
readme = "../README.md"
categories = ["command-line-utilities","development-tools"]
keywords = ["znippy", "artifacts", "blake3", "cli","airgap"]


[dependencies]

hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }


serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
anyhow = "1.0.98"

derivative = "2.2.0"
#holger-traits = {path="../holger-traits"}
holger-traits = {version = "0.2.0"}
#holger-rust-repository = {path ="../holger-rust-repository"}
holger-rust-repository = {version = "0.2.0"}
holger-python-repository = {path = "../holger-python-repository"}

hyper-util = { version = "0.1.16", features = ["tokio"] }
tokio-rustls = "0.26.2"
rustls = { version = "0.23.31", features = ["std"] }
rustls-pemfile = "1.0.4"
http-body-util = "0.1.3"
async-trait = "0.1.88"
ron = "0.10.1"
